--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -19,11 +19,7 @@ apply id: 'groovy'
 apply id: 'code-quality'
 
 repositories {
-    add(new URLResolver()) {
-        name = 'artifactory_localRepo'
-        addArtifactPattern('http://gradle.artifactoryonline.com/gradle/ext-releases-local/[organisation]/[module](/[branch])/[type]s/[artifact]-[revision](-[classifier])(.[ext])')
-    }
-    mavenRepo(urls: 'http://gradle.artifactoryonline.com/gradle/repo1')
+    mavenRepo(urls: 'http://gradle.artifactoryonline.com/gradle/libs-releases')
 }
 
 dependencies {
