Gradle-290 Added hook for xml.
Made MavenPom.addDependencies truly additive
Added the spock framework dependency and the first spock test.

--- a/subprojects/gradle-core/core.gradle
+++ b/subprojects/gradle-core/core.gradle
@@ -69,8 +69,7 @@ dependencies {
 
     runtime libraries.log4j_to_slf4j, libraries.jcl_to_slf4j
 
-
-    testCompile libraries.xmlunit
+    testCompile libraries.xmlunit, "org.spockframework:spock-core:0.4-groovy-1.7-SNAPSHOT"
 
     runtime libraries.ant_launcher
     // TODO - this should be in the plugins project
