Changed virtual artifactory repo.

--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ allprojects {
     }
 
     repositories {
-        mavenRepo(urls: 'http://gradle.artifactoryonline.com/gradle/libs-releases')
+        mavenRepo(urls: 'http://gradle.artifactoryonline.com/gradle/libs')
     }
 
     version = this.version
