--- a/website/build.gradle
+++ b/website/build.gradle
@@ -1,3 +1,18 @@
+/*
+ * Copyright 2010 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 import groovy.text.SimpleTemplateEngine
 import groovy.text.Template
 import groovy.text.TemplateEngine
@@ -67,10 +82,15 @@ task html(dependsOn: userguideContent) << {
     }
 
     copy {
-        from webSrcDir
         into buildWebsiteDir
-        include 'css/**'
-        include 'img/**'
+        from(webSrcDir) {
+            include 'css/**'
+            include 'img/**'
+        }
+        from(generatedDocs) {
+            include 'base.css'
+            into 'css'
+        }
     }
 }
 
@@ -78,6 +98,7 @@ task uploadWebsite(dependsOn: html) << {
     ftp(action: 'delete') {
         fileset() {
             include(name: '*.html')
+            include(name: '*.php')
         }
     }
     ftp(action: 'send') {
@@ -86,6 +107,12 @@ task uploadWebsite(dependsOn: html) << {
 }
 
 task uploadLatestWebsite(dependsOn: html) << {
+    ftp(action: 'delete', remotedir: 'latest') {
+        fileset() {
+            include(name: '*.html')
+            include(name: '*.php')
+        }
+    }
     ftp(action: 'send', remotedir: 'latest') {
         fileset(dir: buildWebsiteDir)
     }
