GRADLE-680 - Treat a task with no actions as up-to-date when its dependencies are up-to-date - Extracted ProgressLogger out of Logger. - Changed TaskExecutionLogger to use ProgressLogger. Allows up-to-date status of task to be calculated and reported at end of task execution.

--- a/subprojects/gradle-docs/src/samples/logging/buildSrc/build.gradle
+++ b/subprojects/gradle-docs/src/samples/logging/buildSrc/build.gradle
@@ -13,10 +13,11 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 println 'buildSrc quiet'
 logger.info 'buildSrc info'
 
-task classes
+task classes << {}
 
 convention.plugins.java = new ProjectInfo(project: project);
 
