GRADLE-842 Pushed definition of Default/Archives Configuration to BasePlugin

--- a/subprojects/gradle-docs/src/samples/java/base/prod/build.gradle
+++ b/subprojects/gradle-docs/src/samples/java/base/prod/build.gradle
@@ -15,8 +15,7 @@
  */
 
 configurations {
-    archives
-    add('default').extendsFrom(archives, compile)
+    getByName('default').extendsFrom(compile)
 }
 
 dependencies {
