- Include the tutorials chapter in the userguide (in addition to the website) - Some style, front page and navigation tweaks

--- a/subprojects/gradle-docs/docs.gradle
+++ b/subprojects/gradle-docs/docs.gradle
@@ -216,7 +216,7 @@ task distDocs(type: Docbook2Xhtml, dependsOn: userguideFragmentSrc) {
 
 task websiteDocsSrc(type: UserGuideTransformTask, dependsOn: [userguideStyleSheets, samples]) {
     standalone = true
-    sourceFile = new File(userguideSrcDir, 'website.xml')
+    sourceFile = new File(userguideSrcDir, 'userguide.xml')
     destFile = new File(docbookSrc, 'website.xml')
     doFirst {task ->
         task.javadocUrl = remoteLocations.javadocUrl
