--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@
  */
 
 
+
+
 import java.text.SimpleDateFormat
 import java.util.jar.Attributes
 import org.gradle.api.artifacts.repositories.WebdavResolver
@@ -81,6 +83,7 @@ allprojects {
 
     repositories {
         mavenRepo(urls: 'http://gradle.artifactoryonline.com/gradle/libs')
+        mavenRepo(urls: 'http://jansi.fusesource.org/repo/release')
     }
 
     version = this.version
