GRADLE-800 - Changed test execution to load classes under test using test process' system classloader, rather than an isolated classloader

--- a/subprojects/gradle-core/core.gradle
+++ b/subprojects/gradle-core/core.gradle
@@ -15,6 +15,8 @@
  */
 
 
+
+
 import java.text.DateFormat
 
 apply id: 'groovy'
@@ -101,6 +103,16 @@ ide.dependsOn ideVersionProperties
 
 test {
     jvmArgs '-Xms128m', '-Xmx512m', '-XX:MaxPermSize=128m', '-XX:+HeapDumpOnOutOfMemoryError'
+}
+
+task workerJar(type: Jar) {
+    from sourceSets.main.classes
+    include 'org/gradle/process/launcher/**'
+    baseName = "$jar.baseName-worker"
+}
+
+artifacts {
+    archives workerJar
 }
 
 class WriteVersionProperties extends DefaultTask {
