--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,8 @@ libraries = [
         logback_classic : 'ch.qos.logback:logback-classic:0.9.18@jar',
         logback_core    : 'ch.qos.logback:logback-core:0.9.18@jar',
         junit           : 'junit:junit:4.7',
-        xmlunit         : 'xmlunit:xmlunit:1.3'
+        xmlunit         : 'xmlunit:xmlunit:1.3',
+        spock           : 'org.spockframework:spock-core:0.4-groovy-1.7-SNAPSHOT'
     ]
 
 libraries.groovy_depends  = [libraries.groovy, libraries.commons_cli]
@@ -98,7 +99,7 @@ configure(groovyProjects()) {
 
     archivesBaseName = "gradle-${name.replaceAll("\\p{Upper}") { "-${it.toLowerCase()}" } }"
     dependencies {
-        testCompile libraries.junit, FIRST_LEVEL_JMOCK
+        testCompile libraries.junit, FIRST_LEVEL_JMOCK, libraries.spock
         testCompile module("org.jmock:jmock:2.5.1") {
             dependencies('org.jmock:jmock-legacy:2.5.1@jar', 'org.objenesis:objenesis:1.0', 'cglib:cglib-nodep:2.1_3')
             dependencies(FIRST_LEVEL_JMOCK as Object[])
