Fixed detection of gradle core jar to work with the newest Gradle version.

--- a/subprojects/gradle-open-api/open-api.gradle
+++ b/subprojects/gradle-open-api/open-api.gradle
@@ -2,5 +2,7 @@ apply id: 'groovy'
 
 dependencies {
     groovy libraries.groovy_depends
+    testCompile project(path: ':core', configuration: 'testFixtures')
+    testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
 }
 
