--- a/subprojects/gradle-docs/src/samples/java/multiproject/settings.gradle
+++ b/subprojects/gradle-docs/src/samples/java/multiproject/settings.gradle
@@ -1,4 +1,4 @@
 
 // START SNIPPET include-projects
-include "shared", "api", "services:webservice"
+include "shared", "api", "services:webservice", "services:shared"
 // END SNIPPET include-projects
